# SBOT_ROS2_Driver

./: .gitignore  README.md  justfile  pyproject.toml  setup_workspace.sh
src/action_interfaces/: CMakeLists.txt  package.xml
src/action_interfaces/action/: OnRobotGripper.action  SetCartPos.action  SetJointPos.action
src/sb_controller/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/sb_controller/sb_controller/: standard_bot_camera_feed_node.py  standard_bot_set_cart_pose_client_node.py  standard_bot_set_cart_pose_server_node.py  standard_bot_set_joint_rot_client_node.py  standard_bot_set_joint_rot_server_node.py  standard_bot_status_node.py  standart_bot_on_robot_gripper_client_node.py  standart_bot_on_robot_gripper_server_node.py
src/sbot_interfaces/: CMakeLists.txt  package.xml
src/sbot_interfaces/msg/: GripperStatus.msg  RobotStatus.msg  SensorStatus.msg
src/sbot_interfaces/srv/: GetRobotStatus.srv
src/standard_bot_bringup/: CMakeLists.txt  package.xml
src/standard_bot_bringup/launch/: demo.launch.py
tests/: test1.py
