<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sb_controller</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="sarah@todo.todo">sarah</maintainer>
  <license>TODO: License declaration</license>

  <!-- Runtime dependencies -->
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>standardbots</depend>
  <depend>geometry_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>sensor_msgs</depend>
  <depend>cv2</depend>
  <depend>numpy</depend>
  <depend>base64</depend>
  <depend>standard_bot_status_node</depend>
  <depend>action_msgs</depend>
  <!-- Interfaces  -->
  <depend>sbot_interfaces</depend>
  <depend>ament_cmake</depend>

  <!-- Build dependencies -->
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  
  <!-- Test dependencies -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <!-- Specify the build type for Python-based packages -->
    <build_type>ament_python</build_type>
  </export>
</package>
